@@ -42,6 +42,7 @@ Version 0.6.0~dev
 	* Support simple h264 transcode in ffmpeg worker.
 	* Support aac codec in ffmpeg worker.
 	* Add qt-faststart worker.
+	* Add flvtool2 worker.
 
 Version 0.5.0 Released on 2012/03/29
 
